# expensas-backend

./: .env.sample  Cargo.toml  deps-pod.yaml  expensasb.service
migrations/: 20220612160738_create-sessions.down.sql  20220612160738_create-sessions.up.sql  20220625171924_create-expenses.down.sql  20220625171924_create-expenses.up.sql  20220703111929_add-expenses-date-label-detail.down.sql  20220703111929_add-expenses-date-label-detail.up.sql  20220820185132_create-transfers.up.sql  20230105115107_add-split-proportional3to2.down.sql  20230105115107_add-split-proportional3to2.up.sql
src/: auth.rs  env.rs  main.rs  queries.rs  routes.rs
src/queries/: expense.rs  session.rs  summary.rs  transfer.rs
src/routes/: expense.rs  list.rs  session.rs  summary.rs  transfer.rs
