[package]
name = "expensas"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { version = "1.0.57", features = ["std"], default-features = false }
axum = { version = "0.6.7", features = ["http1", "json", "macros", "tokio"], default-features = false }
axum-extra = { version = "0.5.0", features = ["cookie-private"], default-features = false }
futures = { version = "0.3.21", default-features = false }
itertools = { version = "0.10.3", default-features = false }
serde = { version = "1.0.137", features = ["derive"], default-features = false }
sqlx = { version = "0.6.1", features = ["macros", "migrate", "postgres", "runtime-tokio-rustls", "time"], default-features = false }
time = { version = "0.3.11", features = ["serde", "parsing", "formatting"], default-features = false }
tokio = { version = "1.19.2", features = ["io-util", "macros", "rt-multi-thread", "time"], default-features = false }
tower-http = { version = "0.3.4", features = ["cors", "trace"], default-features = false }
tracing = { version = "0.1.35", default-features = false }
tracing-subscriber = { version = "0.3.11", features = ["fmt", "ansi"], default-features = false }
